# Maxim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  README.md  main.py  pyproject.toml
data/motion/: default_actions.json
data/util/: key_responses.json  phrase_responses.json
scripts/: main.py
src/camera/: display.py  sight.py
src/configs/: README.md
src/configs/templates/: default_actions.json  default_poses.json  env.example  key_responses.json  llm.json  motor_cortex.json  movement_thresholds.json
src/conscience/: nocecieption.py  observation.py  selfy.py
src/data/: __init__.py
src/data/audio/: sound.py
src/inference/: motor_cortex_observation.py  observation.py  observation_face.py  observation_passive.py
src/maxim/: __init__.py  cli.py
src/maxim/agents/: __init__.py  base.py  goal_agent.py  reachy_agent.py
src/maxim/conscience/: __init__.py  selfy.py
src/maxim/environment/: __init__.py  base.py  filesystem_env.py  internet_env.py  reachy_env.py
src/maxim/evaluation/: __init__.py  agent_eval.py  base.py  llm_benchmark.py  metrics.py  plan_eval.py  tool_eval.py
src/maxim/evaluations/: __init__.py
src/maxim/inference/: __init__.py  motor_cortex_observation.py  observation.py  observation_face.py  observation_passive.py
src/maxim/tools/: base.py  (+4 more)
src/models/: segmentation.py
src/motion/: actions.json  actions.py  move.py  movement.py
src/tests/: basic_audio.sh  basic_learn.sh  basic_move.sh  basic_vision.sh
src/training/: callbacks.py  losses.py  movement.py
src/utils/: config.py  data_management.py
src/video/: sight.py
(+44 files in other folders)
