[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reachy-mini[gstreamer]>=1.2.4",
    "ultralytics>=8.0.0",
    "lap>=0.5.12",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.2.20",
]

[project.scripts]
maxim = "maxim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["maxim*"]
