[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reachy-mini[gstreamer]==1.2.6",
    "ultralytics==8.3.248",
    "lap==0.5.12",
    "faster-whisper==1.0.0",
    "onnxruntime==1.20.1",
    "av==11.0.0",
    "numpy==2.2.5",
    "opencv-python==4.12.0.88",
    "scipy==1.15.3",
    "tensorflow==2.20.0",
    "keras==3.13.0",
    "h5py==3.15.1",
    "protobuf==6.33.2",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.2.20",
]

[project.scripts]
maxim = "maxim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["maxim*"]
